库/XCGUI/xcgui.h

typedef  __int64  vint;
typedef  int      vint;
typedef void* HXCGUI;       
enum XC_OBJECT_TYPE  
{
	XC_ERROR = -1,   
	XC_NOTHING = 0,    
	XC_WINDOW = 1,    
	XC_MODALWINDOW = 2,    
	XC_FRAMEWND = 3,    
	XC_FLOATWND = 4,    
	XC_COMBOBOXWINDOW = 11,   
	XC_POPUPMENUWINDOW = 12,  
	XC_POPUPMENUCHILDWINDOW = 13,   
	XC_OBJECT_UI = 19,   
	XC_WIDGET_UI = 20,   
	XC_ELE = 21,   
	XC_BUTTON = 22,   
	XC_RICHEDIT = 23,   
	XC_COMBOBOX = 24,   
	XC_SCROLLBAR = 25,   
	XC_SCROLLVIEW = 26,   
	XC_LIST = 27,   
	XC_LISTBOX = 28,   
	XC_LISTVIEW = 29,   
	XC_TREE = 30,   
	XC_MENUBAR = 31,   
	XC_SLIDERBAR = 32,   
	XC_PROGRESSBAR = 33,   
	XC_TOOLBAR = 34,   
	XC_MONTHCAL = 35,   
	XC_DATETIME = 36,   
	XC_PROPERTYGRID = 37,   
	XC_EDIT_COLOR = 38,   
	XC_EDIT_SET = 39,   
	XC_TABBAR = 40,   
	XC_TEXTLINK = 41,   
	XC_PANE = 42,   
	XC_PANE_SPLIT = 43,   
	XC_MENUBAR_BUTTON = 44,   
	XC_EDIT = 45,   
	XC_EDITOR = 46,   
	XC_TABLE = 47,   
	XC_EDIT_FILE = 50,   
	XC_EDIT_FOLDER = 51,   
	XC_LIST_HEADER = 52,   
	XC_ELE_LAYOUT = 53,   
	XC_LAYOUT_FRAME = 54,   
	XC_SHAPE = 61,    
	XC_SHAPE_TEXT = 62,    
	XC_SHAPE_PICTURE = 63,    
	XC_SHAPE_RECT = 64,    
	XC_SHAPE_ELLIPSE = 65,    
	XC_SHAPE_LINE = 66,    
	XC_SHAPE_GROUPBOX = 67,    
	XC_SHAPE_GIF = 68,    
	XC_SHAPE_TABLE = 69,    
	XC_MENU = 81,   
	XC_IMAGE_TEXTURE = 82,   
	XC_HDRAW = 83,   
	XC_FONT = 84,   
	XC_IMAGE_FRAME = 88,   
	XC_SVG = 89,   
	XC_LAYOUT_OBJECT = 101, 
	XC_ADAPTER = 102, 
	XC_ADAPTER_TABLE = 103, 
	XC_ADAPTER_TREE = 104, 
	XC_ADAPTER_LISTVIEW = 105, 
	XC_ADAPTER_MAP = 106, 
	XC_BKINFOM = 116, 
	XC_LAYOUT_LISTVIEW = 111,  
	XC_LAYOUT_LIST = 112,  
	XC_LAYOUT_OBJECT_GROUP = 113,  
	XC_LAYOUT_OBJECT_ITEM = 114,  
	XC_LAYOUT_PANEL = 115,  
	XC_LAYOUT_BOX = 124,      
	XC_EXTENSION       =125,      
	XC_ANIMATION_SEQUENCE = 131,   
	XC_ANIMATION_GROUP = 132,   
	XC_ANIMATION_ITEM = 133,   
};
enum listItemTemp_type_  
{
	listItemTemp_type_tree = 0x01,					  
	listItemTemp_type_listBox = 0x02,				  
	listItemTemp_type_list_head = 0x04,				  
	listItemTemp_type_list_item = 0x08,				  
	listItemTemp_type_listView_group = 0x10,		  
	listItemTemp_type_listView_item = 0x20,			  
	listItemTemp_type_list = listItemTemp_type_list_head | listItemTemp_type_list_item,  
	listItemTemp_type_listView = listItemTemp_type_listView_group | listItemTemp_type_listView_item, 
};
struct listBox_item_info_
{
	vint    nUserData;  
	int     nHeight;    
	int     nSelHeight; 
};
XC_API void WINAPI XListBox_EnableTemplateReuse(HELE hEle, BOOL bEnable);
XC_API void WINAPI XListBox_EnableVirtualTable(HELE hEle, BOOL bEnable);
XC_API void WINAPI XListBox_SetVirtualRowCount(HELE hEle, int nRowCount);
XC_API void WINAPI XListBox_SetDrawItemBkFlags(HELE hEle, int nFlags);
XC_API BOOL WINAPI XListBox_SetItemData(HELE hEle, int iItem, vint nUserData);
XC_API vint WINAPI XListBox_GetItemData(HELE hEle, int iItem);
XC_API BOOL WINAPI XListBox_SetItemInfo(HELE hEle, int iItem, listBox_item_info_* pItem);
XC_API BOOL WINAPI XListBox_GetItemInfo(HELE hEle, int iItem, listBox_item_info_* pItem);
XC_API BOOL WINAPI XListBox_SetSelectItem(HELE hEle, int iItem);
XC_API int WINAPI XListBox_GetSelectItem(HELE hEle);
XC_API BOOL WINAPI XListBox_AddSelectItem(HELE hEle, int iItem);
XC_API BOOL WINAPI XListBox_CancelSelectItem(HELE hEle, int iItem);
XC_API BOOL WINAPI XListBox_CancelSelectAll(HELE hEle);
XC_API int WINAPI XListBox_GetSelectAll(HELE hEle, int* pArray, int nArraySize);
XC_API int WINAPI XListBox_GetSelectCount(HELE hEle);
XC_API int WINAPI XListBox_GetItemMouseStay(HELE hEle);
XC_API BOOL WINAPI XListBox_SelectAll(HELE hEle);
XC_API void WINAPI XListBox_VisibleItem(HELE hEle, int iItem);
XC_API void WINAPI XListBox_GetVisibleRowRange(HELE hEle, int* piStart, int* piEnd);
XC_API void WINAPI XListBox_SetItemHeightDefault(HELE hEle, int nHeight, int nSelHeight);
XC_API void WINAPI XListBox_GetItemHeightDefault(HELE hEle, int* pHeight, int* pSelHeight);
XC_API int WINAPI XListBox_GetItemIndexFromHXCGUI(HELE hEle, HXCGUI hXCGUI);
XC_API void WINAPI XListBox_SetRowSpace(HELE hEle, int nSpace);
XC_API int WINAPI XListBox_GetRowSpace(HELE hEle);
XC_API int WINAPI XListBox_HitTest(HELE hEle, POINT* pPt);
XC_API int WINAPI XListBox_HitTestOffset(HELE hEle, POINT* pPt);
XC_API BOOL WINAPI XListBox_SetItemTemplateXML(HELE hEle, const wchar_t* pXmlFile);
XC_API BOOL WINAPI XListBox_SetItemTemplate(HELE hEle, HTEMP hTemp);
XC_API BOOL WINAPI XListBox_SetItemTemplateXMLFromString(HELE hEle, const char* pStringXML);
XC_API HXCGUI WINAPI XListBox_GetTemplateObject(HELE hEle, int iItem, int nTempItemID);
XC_API void WINAPI XListBox_EnableMultiSel(HELE hEle, BOOL bEnable);
XC_API HXCGUI WINAPI XListBox_CreateAdapter(HELE hEle);
XC_API void WINAPI XListBox_BindAdapter(HELE hEle, HXCGUI hAdapter);
XC_API HXCGUI WINAPI XListBox_GetAdapter(HELE hEle);
XC_API void WINAPI XListBox_Sort(HELE hEle, int iColumnAdapter, BOOL bAscending);
XC_API void WINAPI XListBox_RefreshData(HELE hEle);
XC_API void WINAPI XListBox_RefreshItem(HELE hEle, int iItem);
XC_API int WINAPI XListBox_AddItemText(HELE hEle, const wchar_t* pText);
XC_API int WINAPI XListBox_AddItemTextEx(HELE hEle, const wchar_t* pName, const wchar_t* pText);
XC_API int WINAPI XListBox_AddItemImage(HELE hEle, HIMAGE hImage);
XC_API int WINAPI XListBox_AddItemImageEx(HELE hEle, const wchar_t* pName, HIMAGE hImage);
XC_API int WINAPI XListBox_InsertItemText(HELE hEle, int iItem, const wchar_t* pValue);
XC_API int WINAPI XListBox_InsertItemTextEx(HELE hEle, int iItem, const wchar_t* pName, const wchar_t* pValue);
XC_API int WINAPI XListBox_InsertItemImage(HELE hEle, int iItem, HIMAGE hImage);
XC_API int WINAPI XListBox_InsertItemImageEx(HELE hEle, int iItem, const wchar_t* pName, HIMAGE hImage);
XC_API BOOL WINAPI XListBox_SetItemText(HELE hEle, int iItem, int iColumn, const wchar_t* pText);
XC_API BOOL WINAPI XListBox_SetItemTextEx(HELE hEle, int iItem, const wchar_t* pName, const wchar_t* pText);
XC_API BOOL WINAPI XListBox_SetItemImage(HELE hEle, int iItem, int iColumn, HIMAGE hImage);
XC_API BOOL WINAPI XListBox_SetItemImageEx(HELE hEle, int iItem, const wchar_t* pName, HIMAGE hImage);
XC_API BOOL WINAPI XListBox_SetItemInt(HELE hEle, int iItem, int iColumn, int nValue);
XC_API BOOL WINAPI XListBox_SetItemIntEx(HELE hEle, int iItem, const wchar_t* pName, int nValue);
XC_API BOOL WINAPI XListBox_SetItemFloat(HELE hEle, int iItem, int iColumn, float fFloat);
XC_API BOOL WINAPI XListBox_SetItemFloatEx(HELE hEle, int iItem, const wchar_t* pName, float fFloat);
XC_API const wchar_t* WINAPI XListBox_GetItemText(HELE hEle, int iItem, int iColumn);
XC_API const wchar_t* WINAPI XListBox_GetItemTextEx(HELE hEle, int iItem, const wchar_t* pName);
XC_API HIMAGE WINAPI XListBox_GetItemImage(HELE hEle, int iItem, int iColumn);
XC_API HIMAGE WINAPI XListBox_GetItemImageEx(HELE hEle, int iItem, const wchar_t* pName);
XC_API BOOL WINAPI XListBox_GetItemInt(HELE hEle, int iItem, int iColumn, int* pOutValue);
XC_API BOOL WINAPI XListBox_GetItemIntEx(HELE hEle, int iItem, const wchar_t* pName, int* pOutValue);
XC_API BOOL WINAPI XListBox_GetItemFloat(HELE hEle, int iItem, int iColumn, float* pOutValue);
XC_API BOOL WINAPI XListBox_GetItemFloatEx(HELE hEle, int iItem, const wchar_t* pName, float* pOutValue);
XC_API BOOL WINAPI XListBox_DeleteItem(HELE hEle, int iItem);
XC_API BOOL WINAPI XListBox_DeleteItemEx(HELE hEle, int iItem, int nCount);
XC_API void WINAPI XListBox_DeleteItemAll(HELE hEle);
XC_API void WINAPI XListBox_DeleteColumnAll(HELE hEle);
XC_API int WINAPI XListBox_GetCount_AD(HELE hEle);
XC_API int WINAPI XListBox_GetCountColumn_AD(HELE hEle);
XC_API HELE WINAPI XList_Create(int x, int y, int cx, int cy, HXCGUI hParent=NULL);
XC_API int WINAPI XList_AddColumn(HELE hEle, int width);
XC_API int WINAPI XList_InsertColumn(HELE hEle, int width, int iCol);
XC_API void WINAPI XList_EnableMultiSel(HELE hEle, BOOL bEnable);
XC_API void WINAPI XList_EnableDragChangeColumnWidth(HELE hEle, BOOL bEnable);
XC_API void WINAPI XList_EnableVScrollBarTop(HELE hEle, BOOL bTop);
XC_API void WINAPI XList_EnableFixedRowHeight(HELE hEle, BOOL bEnable);
XC_API void WINAPI XList_EnableTemplateReuse(HELE hEle, BOOL bEnable);
XC_API void WINAPI XList_EnableVirtualTable(HELE hEle, BOOL bEnable);
XC_API void WINAPI XList_SetVirtualRowCount(HELE hEle, int nRowCount);
XC_API void WINAPI XList_SetSort(HELE hEle, int iColumn, int iColumnAdapter, BOOL bEnable);
XC_API void WINAPI XList_SetColumnWidth(HELE hEle, int iRow, int width);
XC_API void WINAPI XList_SetColumnMinWidth(HELE hEle, int iRow, int width);
XC_API void WINAPI XList_SetColumnWidthFixed(HELE hEle, int iColumn, BOOL bFixed);
XC_API int WINAPI XList_GetColumnWidth(HELE hEle, int iColumn);
XC_API int WINAPI XList_GetColumnCount(HELE hEle);
XC_API BOOL WINAPI XList_SetItemData(HELE hEle, int iRow, int iColumn, vint data);
XC_API vint WINAPI XList_GetItemData(HELE hEle, int iRow, int iColumn);
XC_API BOOL WINAPI XList_DeleteColumn(HELE hEle, int iColumn);
XC_API void WINAPI XList_DeleteColumnAll(HELE hEle);
XC_API HTEMP WINAPI XTemp_Load(listItemTemp_type_ nType, const wchar_t* pFileName);
XC_API HTEMP WINAPI XTemp_LoadZip(listItemTemp_type_ nType, const wchar_t* pZipFile, const wchar_t* pFileName, const wchar_t* pPassword=NULL);
XC_API HTEMP WINAPI XTemp_LoadZipMem(listItemTemp_type_ nType, const void* data, int length, const wchar_t* pFileName, const wchar_t* pPassword=NULL);
XC_API BOOL WINAPI XTemp_LoadEx(listItemTemp_type_ nType, const wchar_t* pFileName, HTEMP* pOutTemp1, HTEMP* pOutTemp2);
XC_API BOOL WINAPI XTemp_LoadZipEx(listItemTemp_type_ nType, const wchar_t* pZipFile, const wchar_t* pFileName, const wchar_t* pPassword, HTEMP* pOutTemp1, HTEMP* pOutTemp2);
XC_API BOOL WINAPI XTemp_LoadZipMemEx(listItemTemp_type_ nType, const void* data, int length, const wchar_t* pFileName, const wchar_t* pPassword, HTEMP* pOutTemp1, HTEMP* pOutTemp2);
XC_API HTEMP WINAPI XTemp_LoadFromString(listItemTemp_type_ nType, const char* pStringXML);
XC_API BOOL WINAPI XTemp_LoadFromStringEx(listItemTemp_type_ nType, const char* pStringXML, HTEMP* pOutTemp1, HTEMP* pOutTemp2);
XC_API listItemTemp_type_ WINAPI XTemp_GetType(HTEMP hTemp);
XC_API BOOL WINAPI XTemp_Destroy(HTEMP hTemp);
XC_API HTEMP WINAPI XTemp_Create(listItemTemp_type_ nType);
XC_API BOOL WINAPI XTemp_AddNodeRoot(HTEMP hTemp, void* pNode);
XC_API BOOL WINAPI XTemp_AddNode(void* pParentNode, void* pNode);
XC_API void* WINAPI XTemp_CreateNode(XC_OBJECT_TYPE nType);
XC_API BOOL WINAPI XTemp_SetNodeAttribute(void* pNode, const wchar_t* pName, const wchar_t* pAttr);
XC_API BOOL WINAPI XTemp_SetNodeAttributeEx(void* pNode, int itemID, const wchar_t* pName, const wchar_t* pAttr);
XC_API void* WINAPI XTemp_List_GetNode(HTEMP hTemp, int index);
XC_API void* WINAPI XTemp_GetNode(void* pNode, int itemID);
XC_API void* WINAPI XTemp_CloneNode(void* pNode);