库/XCGUI/XCGUI.pas


procedure XListBox_EnableTemplateReuse(hEle: HELE; bEnable: BOOL); stdcall; external XCGUI_DLL;

procedure XListBox_EnableVirtualTable(hEle: HELE; bEnable: BOOL); stdcall; external XCGUI_DLL;

procedure XListBox_SetVirtualRowCount(hEle: HELE; nRowCount: Integer); stdcall; external XCGUI_DLL;

procedure XListBox_SetDrawItemBkFlags(hEle: HELE; nFlags: Integer); stdcall; external XCGUI_DLL;

function XListBox_SetItemData(hEle: HELE; iItem: Integer; nUserData: vint): BOOL; stdcall; external XCGUI_DLL;

function XListBox_GetItemData(hEle: HELE; iItem: Integer): vint; stdcall; external XCGUI_DLL;

function XListBox_SetItemInfo(hEle: HELE; iItem: Integer; pItem: TlistBox_item_info_): BOOL; stdcall; external XCGUI_DLL;

function XListBox_GetItemInfo(hEle: HELE; iItem: Integer; out pItem: TlistBox_item_info_): BOOL; stdcall; external XCGUI_DLL;

function XListBox_SetSelectItem(hEle: HELE; iItem: Integer): BOOL; stdcall; external XCGUI_DLL;

function XListBox_GetSelectItem(hEle: HELE): Integer; stdcall; external XCGUI_DLL;

function XListBox_AddSelectItem(hEle: HELE; iItem: Integer): BOOL; stdcall; external XCGUI_DLL;

function XListBox_CancelSelectItem(hEle: HELE; iItem: Integer): BOOL; stdcall; external XCGUI_DLL;

function XListBox_CancelSelectAll(hEle: HELE): BOOL; stdcall; external XCGUI_DLL;

function XListBox_GetSelectAll(hEle: HELE; pArray: vint; nArraySize: Integer): Integer; stdcall; external XCGUI_DLL;

function XListBox_GetSelectCount(hEle: HELE): Integer; stdcall; external XCGUI_DLL;

function XListBox_GetItemMouseStay(hEle: HELE): Integer; stdcall; external XCGUI_DLL;

function XListBox_SelectAll(hEle: HELE): BOOL; stdcall; external XCGUI_DLL;

procedure XListBox_VisibleItem(hEle: HELE; iItem: Integer); stdcall; external XCGUI_DLL;

procedure XListBox_GetVisibleRowRange(hEle: HELE; out piStart: Integer; out piEnd: Integer); stdcall; external XCGUI_DLL;

procedure XListBox_SetItemHeightDefault(hEle: HELE; nHeight: Integer; nSelHeight: Integer); stdcall; external XCGUI_DLL;

procedure XListBox_GetItemHeightDefault(hEle: HELE; out pHeight: Integer; out pSelHeight: Integer); stdcall; external XCGUI_DLL;

function XListBox_GetItemIndexFromHXCGUI(hEle: HELE; hXCGUI: HXCGUI): Integer; stdcall; external XCGUI_DLL;

procedure XListBox_SetRowSpace(hEle: HELE; nSpace: Integer); stdcall; external XCGUI_DLL;

function XListBox_GetRowSpace(hEle: HELE): Integer; stdcall; external XCGUI_DLL;

function XListBox_HitTest(hEle: HELE; pPt: PPoint): Integer; stdcall; external XCGUI_DLL;

function XListBox_HitTestOffset(hEle: HELE; var pPt: TPoint): Integer; stdcall; external XCGUI_DLL;

function XListBox_SetItemTemplateXML(hEle: HELE; pXmlFile: PWideChar): BOOL; stdcall; external XCGUI_DLL;

function XListBox_SetItemTemplateXMLFromString(hEle: HELE; pStringXML: PAnsiChar): BOOL; stdcall; external XCGUI_DLL;

function XListBox_SetItemTemplate(hEle: HELE; hTemp: HTEMP): BOOL; stdcall; external XCGUI_DLL;

function XListBox_GetTemplateObject(hEle: HELE; iItem: Integer; nTempItemID: Integer): HXCGUI; stdcall; external XCGUI_DLL;

procedure XListBox_EnableMultiSel(hEle: HELE; bEnable: BOOL); stdcall; external XCGUI_DLL;

function XListBox_CreateAdapter(hEle: HELE): HXCGUI; stdcall; external XCGUI_DLL;

procedure XListBox_BindAdapter(hEle: HELE; hAdapter: HXCGUI); stdcall; external XCGUI_DLL;

function XListBox_GetAdapter(hEle: HELE): HXCGUI; stdcall; external XCGUI_DLL;

procedure XListBox_Sort(hEle: HELE; iColumnAdapter: Integer; bAscending: BOOL); stdcall; external XCGUI_DLL;

procedure XListBox_RefreshData(hEle: HELE); stdcall; external XCGUI_DLL;

procedure XListBox_RefreshItem(hEle: HELE; iItem: Integer); stdcall; external XCGUI_DLL;

function XListBox_AddItemText(hEle: HELE; pText: PWideChar): Integer; stdcall; external XCGUI_DLL;

function XListBox_AddItemTextEx(hEle: HELE; pName: PWideChar; pText: PWideChar): Integer; stdcall; external XCGUI_DLL;

function XListBox_AddItemImage(hEle: HELE; hImage: HIMAGE): Integer; stdcall; external XCGUI_DLL;

function XListBox_AddItemImageEx(hEle: HELE; pName: PWideChar; hImage: HIMAGE): Integer; stdcall; external XCGUI_DLL;

function XListBox_InsertItemText(hEle: HELE; iItem: Integer; pValue: PWideChar): Integer; stdcall; external XCGUI_DLL;

function XListBox_InsertItemTextEx(hEle: HELE; iItem: Integer; pName: PWideChar; pValue: PWideChar): Integer; stdcall; external XCGUI_DLL;

function XListBox_InsertItemImage(hEle: HELE; iItem: Integer; hImage: HIMAGE): Integer; stdcall; external XCGUI_DLL;

function XListBox_InsertItemImageEx(hEle: HELE; iItem: Integer; pName: PWideChar; hImage: HIMAGE): Integer; stdcall; external XCGUI_DLL;

function XListBox_SetItemText(hEle: HELE; iItem: Integer; iColumn: Integer; pText: PWideChar): BOOL; stdcall; external XCGUI_DLL;

function XListBox_SetItemTextEx(hEle: HELE; iItem: Integer; pName: PWideChar; pText: PWideChar): BOOL; stdcall; external XCGUI_DLL;

function XListBox_SetItemImage(hEle: HELE; iItem: HELE; iColumn: Integer; hImage: HIMAGE): BOOL; stdcall; external XCGUI_DLL;

function XListBox_SetItemImageEx(hEle: HELE; iItem: Integer; pName: PWideChar; hImage: HIMAGE): BOOL; stdcall; external XCGUI_DLL;

function XListBox_SetItemInt(hEle: HELE; iItem: Integer; iColumn: Integer; nValue: Integer): BOOL; stdcall; external XCGUI_DLL;

function XListBox_SetItemIntEx(hEle: HELE; iItem: Integer; pName: PWideChar; nValue: Integer): BOOL; stdcall; external XCGUI_DLL;

function XListBox_SetItemFloat(hEle: HELE; iItem: Integer; iColumn: Integer; fFloat: Single): BOOL; stdcall; external XCGUI_DLL;

function XListBox_SetItemFloatEx(hEle: HELE; iItem: Integer; pName: PWideChar; fFloat: Single): BOOL; stdcall; external XCGUI_DLL;

function XListBox_GetItemText(hEle: HELE; iItem: Integer; iColumn: Integer): PWideChar; stdcall; external XCGUI_DLL;

function XListBox_GetItemTextEx(hEle: HELE; iItem: Integer; pName: PWideChar): PWideChar; stdcall; external XCGUI_DLL;

function XListBox_GetItemImage(hEle: HELE; iItem: Integer; iColumn: Integer): HIMAGE; stdcall; external XCGUI_DLL;

function XListBox_GetItemImageEx(hEle: HELE; iItem: Integer; pName: PWideChar): HIMAGE; stdcall; external XCGUI_DLL;

function XListBox_GetItemInt(hEle: HELE; iItem: Integer; iColumn: Integer; out pOutValue: Integer): BOOL; stdcall; external XCGUI_DLL;

function XListBox_GetItemIntEx(hEle: HELE; iItem: Integer; pName: PWideChar; out pOutValue: Integer): BOOL; stdcall; external XCGUI_DLL;

function XListBox_GetItemFloat(hEle: HELE; iItem: HELE; iColumn: Integer; out pOutValue: Single): BOOL; stdcall; external XCGUI_DLL;

function XListBox_GetItemFloatEx(hEle: HELE; iItem: Integer; pName: PWideChar; out pOutValue: Single): BOOL; stdcall; external XCGUI_DLL;

function XListBox_DeleteItem(hEle: HELE; iItem: Integer): BOOL; stdcall; external XCGUI_DLL;

function XListBox_DeleteItemEx(hEle: HELE; iItem: Integer; nCount: Integer): BOOL; stdcall; external XCGUI_DLL;

procedure XListBox_DeleteItemAll(hEle: HELE); stdcall; external XCGUI_DLL;

procedure XListBox_DeleteColumnAll(hEle: HELE); stdcall; external XCGUI_DLL;

function XListBox_GetCount_AD(hEle: HELE): Integer; stdcall; external XCGUI_DLL;

function XListBox_GetCountColumn_AD(hEle: HELE): Integer; stdcall; external XCGUI_DLL;

function XTemp_Load(nType: listItemTemp_type_; pFileName: PWideChar): HTEMP; stdcall; external XCGUI_DLL;

function XTemp_LoadZip(nType: listItemTemp_type_; pZipFile: PWideChar; pFileName: PWideChar; pPassword: PWideChar = nil): HTEMP; stdcall; external XCGUI_DLL;

function XTemp_LoadZipMem(nType: listItemTemp_type_; data: Pointer; length: Integer; pFileName: PWideChar; pPassword: PWideChar = nil): HTEMP; stdcall; external XCGUI_DLL;

function XTemp_LoadEx(nType: listItemTemp_type_; pFileName: PWideChar; out pOutTemp1: HTEMP; out pOutTemp2: HTEMP): BOOL; stdcall; external XCGUI_DLL;

function XTemp_LoadZipEx(nType: listItemTemp_type_; pZipFile: PWideChar; pFileName: PWideChar; pPassword: PWideChar; out pOutTemp1: HTEMP; out pOutTemp2: HTEMP): BOOL; stdcall; external XCGUI_DLL;

function XTemp_LoadZipMemEx(nType: listItemTemp_type_; data: Pointer; length: Integer; pFileName: PWideChar; pPassword: PWideChar; out pOutTemp1: HTEMP; out pOutTemp2: HTEMP): BOOL; stdcall; external XCGUI_DLL;

function XTemp_LoadFromString(nType: listItemTemp_type_; pStringXML: PAnsiChar): HTEMP; stdcall; external XCGUI_DLL;

function XTemp_LoadFromStringEx(nType: listItemTemp_type_; pStringXML: PAnsiChar; out pOutTemp1: HTEMP; out pOutTemp2: HTEMP): BOOL; stdcall; external XCGUI_DLL;

function XTemp_GetType(hTemp: HTEMP): listItemTemp_type_; stdcall; external XCGUI_DLL;

function XTemp_Destroy(hTemp: HTEMP): BOOL; stdcall; external XCGUI_DLL;

function XTemp_Create(nType: listItemTemp_type_): HTEMP; stdcall; external XCGUI_DLL;

function XTemp_AddNodeRoot(hTemp: HTEMP; pNode: Pointer): BOOL; stdcall; external XCGUI_DLL;

function XTemp_AddNode(pParentNode: Pointer; pNode: Pointer): BOOL; stdcall; external XCGUI_DLL;

function XTemp_CreateNode(nType: XC_OBJECT_TYPE): Pointer; stdcall; external XCGUI_DLL;

function XTemp_SetNodeAttribute(pNode: Pointer; pName: PWideChar; pAttr: PWideChar): BOOL; stdcall; external XCGUI_DLL;

function XTemp_SetNodeAttributeEx(pNode: Pointer; itemID: Integer; pName: PWideChar; pAttr: PWideChar): BOOL; stdcall; external XCGUI_DLL;

function XTemp_List_GetNode(hTemp: HTEMP; index: Integer): Pointer; stdcall; external XCGUI_DLL;

function XTemp_GetNode(pNode: Pointer; itemID: Integer): Pointer; stdcall; external XCGUI_DLL;

function XTemp_CloneNode(pNode: Pointer): Pointer; stdcall; external XCGUI_DLL;

function XList_Create(x: Integer; y: Integer; cx: Integer; cy: Integer; hParent: HXCGUI = 0): HELE; stdcall; external XCGUI_DLL;

function XList_AddColumn(hEle: HELE; width: Integer): Integer; stdcall; external XCGUI_DLL;

function XList_InsertColumn(hEle: HELE; width: Integer; iItem: Integer): Integer; stdcall; external XCGUI_DLL;

procedure XList_EnableMultiSel(hEle: HELE; bEnable: BOOL); stdcall; external XCGUI_DLL;

procedure XList_EnableDragChangeColumnWidth(hEle: HELE; bEnable: BOOL); stdcall; external XCGUI_DLL;

procedure XList_EnableVScrollBarTop(hEle: HELE; bTop: BOOL); stdcall; external XCGUI_DLL;

procedure XList_EnableItemBkFullRow(hEle: HELE; bFull: BOOL); stdcall; external XCGUI_DLL;

procedure XList_EnableFixedRowHeight(hEle: HELE; bEnable: BOOL); stdcall; external XCGUI_DLL;

procedure XList_EnableTemplateReuse(hEle: HELE; bEnable: BOOL); stdcall; external XCGUI_DLL;

procedure XList_EnableVirtualTable(hEle: HELE; bEnable: BOOL); stdcall; external XCGUI_DLL;

procedure XList_SetVirtualRowCount(hEle: HELE; nRowCount: Integer); stdcall; external XCGUI_DLL;

procedure XList_SetSort(hEle: HELE; iColumn: Integer; iColumnAdapter: Integer; bEnable: BOOL); stdcall; external XCGUI_DLL;

procedure XList_SetDrawItemBkFlags(hEle: HELE; style: Integer); stdcall; external XCGUI_DLL;

procedure XList_SetColumnWidth(hEle: HELE; iItem: Integer; width: Integer); stdcall; external XCGUI_DLL;

procedure XList_SetColumnMinWidth(hEle: HELE; iItem: Integer; width: Integer); stdcall; external XCGUI_DLL;

procedure XList_SetColumnWidthFixed(hEle: HELE; iColumn: Integer; bFixed: BOOL); stdcall; external XCGUI_DLL;

function XList_GetColumnWidth(hEle: HELE; iColumn: Integer): Integer; stdcall; external XCGUI_DLL;

function XList_GetColumnCount(hEle: HELE): Integer; stdcall; external XCGUI_DLL;

function XList_DeleteColumn(hEle: HELE; iItem: Integer): BOOL; stdcall; external XCGUI_DLL;

procedure XList_DeleteColumnAll(hEle: HELE); stdcall; external XCGUI_DLL;

function XList_SetItemData(hEle: HELE; iItem: Integer; iSubItem: Integer; data: vint): BOOL; stdcall; external XCGUI_DLL;

function XList_GetItemData(hEle: HELE; iItem: Integer; iSubItem: Integer): vint; stdcall; external XCGUI_DLL;

function XList_SetSelectItem(hEle: HELE; iItem: Integer): BOOL; stdcall; external XCGUI_DLL;

function XList_GetSelectItem(hEle: HELE): Integer; stdcall; external XCGUI_DLL;
